# xbridge

./: .gitignore  AGENTS.md  README.md
.github/workflows/: android.yml  flutter.yml  ios.yml  js.yml  release.yml  rust.yml
rust/xbridge_core/: Cargo.toml  README.md
rust/xbridge_core/src/: bridge.rs  control.rs  error.rs  handler.rs  lib.rs  server.rs  sink.rs
rust/xbridge_core/src/ffi/: mod.rs
rust/xbridge_core/tests/: integration.rs
